Cambiando de gifs a jpg la imagen de los signos y agregando nueva carpeta, asi como eliminar el antiguo de gifs

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         
         <div class="zodiac-wheel">
             <div class="sign-container">
-                <div class="sign" data-sign="aries"><img src="img/signos/aries-pl.jpg" alt="Aries"></div>
+                <div class="sign" data-sign="aries"><img src="img/signos/aries.jpg" alt="Aries"></div>
                 <div class="sign-name">Aries</div>
             </div>
             <div class="sign-container">
@@ -32,7 +32,7 @@
                 <div class="sign-name">Cáncer</div>
             </div>
             <div class="sign-container">
-                <div class="sign" data-sign="leo"><img src="img/signos/leo2.jpg" alt="Leo"></div>
+                <div class="sign" data-sign="leo"><img src="img/signos/leo.jpg" alt="Leo"></div>
                 <div class="sign-name">Leo</div>
             </div>
             <div class="sign-container">
@@ -44,7 +44,7 @@
                 <div class="sign-name">Libra</div>
             </div>
             <div class="sign-container">
-                <div class="sign" data-sign="scorpio"><img src="img/signos/escorpio-pl.jpg" alt="Escorpio"></div>
+                <div class="sign" data-sign="scorpio"><img src="img/signos/escorpio.jpg" alt="Escorpio"></div>
                 <div class="sign-name">Escorpio</div>
             </div>
             <div class="sign-container">
